fixes bug where the gallery collapses when images are not yet loaded

--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -205,6 +205,9 @@ a {
       }
     }
   }
+  .blocks-gallery-grid {
+    width: 100%;
+  }
 }
 .flex {
   display: flex !important;
